[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
meval = "0.2"
# Hier nutzen wir jetzt sqlite
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite"] }